--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       <h2>Follow me</h2>
       <ul class="list-inline">
         <li>
+          <a href="https://github.com/fsndzomga" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </li>
+        <li>
           <a href="https://www.linkedin.com/in/franck-stéphane-ndzomga-447003b4/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
           </a>
